--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -9,8 +9,8 @@
 // @import "node_modules/bootstrap-sass/assets/stylesheets/bootstrap";
 
 // CoreUI Fonts
-@import "coreui/fonts/font-awesome";
-@import "coreui/fonts/simple-line-icons";
+// @import "coreui/fonts/font-awesome";
+// @import "coreui/fonts/simple-line-icons";
 
 // CoreUI Style
 @import "coreui/style"
